--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ExerciseModalFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ExerciseFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,33 +12,53 @@
         android:orientation="vertical"
         android:layout_gravity="center_vertical">
 
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="20dp"
-            android:text="Hello"/>
+            android:layout_marginBottom="50dp"
+            android:text="What Exercise?"
+            android:textColor="#FFFFFF"
+            android:textSize="36sp"
+            app:fontFamily="@font/montserrat_bold"/>
 
         <Button
+            android:id="@+id/runBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="20dp"
-            android:text="Hello"/>
+            android:background="@drawable/circle_white"
+            android:text="RUN"/>
 
         <Button
+            android:id="@+id/walkBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="20dp"
-            android:text="Hello"/>
+            android:background="@drawable/circle_white"
+            android:text="WALK"/>
+
 
         <Button
+            android:id="@+id/bikeBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="10dp"
+            android:background="@drawable/circle_white"
+            android:text="BIKE"/>
+
+
+        <Button
+            android:id="@+id/breatheBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_margin="20dp"
-            android:text="Hello"/>
+            android:background="@drawable/circle_white"
+            android:text="BREATHE"/>
     </LinearLayout>
 
 </FrameLayout>
