--- a/app/src/main/res/layout/activity_form.xml
+++ b/app/src/main/res/layout/activity_form.xml
@@ -14,10 +14,14 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior" >
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
+            app:tabBackground="@drawable/selector_tab_indicator_dot"
+            app:tabGravity="center"
+            app:tabIndicator="@null"
+            app:tabPaddingStart="10dp"
+            app:tabPaddingEnd="10dp"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="bottom"
-            android:background="?attr/selectableItemBackground" />
+            android:layout_gravity="bottom"/>
     </androidx.viewpager.widget.ViewPager>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
