--- a/app/src/main/res/layout/card_summary.xml
+++ b/app/src/main/res/layout/card_summary.xml
@@ -23,7 +23,7 @@
             android:adjustViewBounds="true"
             android:cropToPadding="true"
             android:maxWidth="50dp"
-            android:src="@drawable/mcd_logo" />
+            android:src="@drawable/chain_mcd" />
 
         <ImageView
             android:id="@+id/emotion"
@@ -34,7 +34,7 @@
             android:adjustViewBounds="true"
             android:cropToPadding="true"
             android:maxWidth="50dp"
-            android:src="@drawable/mcd_logo" />
+            android:src="@drawable/emotion_smile" />
 
         <ImageView
             android:id="@+id/exercise"
@@ -45,7 +45,7 @@
             android:adjustViewBounds="true"
             android:cropToPadding="true"
             android:maxWidth="50dp"
-            android:src="@drawable/mcd_logo" />
+            android:src="@drawable/exercise_bike" />
 
         <LinearLayout
             android:layout_width="match_parent"
