--- a/app/src/main/res/layout/card_summary.xml
+++ b/app/src/main/res/layout/card_summary.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
+<com.google.android.material.card.MaterialCardView
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="10dp"
-    app:cardUseCompatPadding="true"
     app:cardElevation="4dp"
     app:cardCornerRadius="3dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -15,36 +15,26 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/foodchain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_margin="10dp"
             android:adjustViewBounds="true"
-            android:cropToPadding="true"
             android:maxWidth="50dp"
             android:src="@drawable/chain_mcd" />
 
         <ImageView
-            android:id="@+id/emotion"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_margin="10dp"
             android:adjustViewBounds="true"
-            android:cropToPadding="true"
             android:maxWidth="50dp"
             android:src="@drawable/emotion_smile" />
 
         <ImageView
-            android:id="@+id/exercise"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_margin="10dp"
             android:adjustViewBounds="true"
-            android:cropToPadding="true"
-            android:maxWidth="50dp"
             android:src="@drawable/exercise_bike" />
 
         <LinearLayout
