add cards dynamically

--- a/app/src/main/res/layout/fragment_journey.xml
+++ b/app/src/main/res/layout/fragment_journey.xml
@@ -83,7 +83,7 @@
                             android:id="@+id/totalUserEntry"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="3 Entries today"
+                            android:text="3 entries total"
                             android:textColor="@color/whiteBodyColor"
                             android:textSize="15sp" />
                         <TextView
