--- a/app/src/main/res/layout/fragment_select_food.xml
+++ b/app/src/main/res/layout/fragment_select_food.xml
@@ -163,7 +163,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/priceInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="64dp"
