--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -6,35 +6,76 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".AnalyticsFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="646dp"
-        android:orientation="vertical"
-        android:layout_gravity="center_vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="50dp"
-            android:text="Current Goal"
-            android:textSize="45sp"
-            app:fontFamily="@font/montserrat_bold" />
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/goalTextInput"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="306dp"
-            android:textSize="25sp"
-            android:hint="Ex) I'm going to use $50 a week!" />
-
-        <Button
-            android:id="@+id/updateBtn"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_margin="20dp"
-            android:text="update" />
-    </LinearLayout>
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="50dp"
+                android:text="Current Goal"
+                android:textSize="45sp"
+                app:fontFamily="@font/montserrat_bold" />
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/goalTextInput"
+                android:layout_width="match_parent"
+                android:layout_height="201dp"
+                android:textSize="25sp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginBottom="24dp"
+                android:hint="Ex) I'm going to use $50 a week!" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:text="Desired Frequency"
+                android:layout_marginLeft="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <EditText
+                android:id="@+id/frequencyGoal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginBottom="24dp"
+                android:inputType="number"
+                android:ems="10" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:text="Desired Cost Limit"
+                android:layout_marginLeft="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <EditText
+                android:id="@+id/costGoalT"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
+                android:inputType="number"
+                android:ems="10" />
+
+            <Button
+                android:id="@+id/updateBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_margin="20dp"
+                android:text="update" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
